# quickhull

./: .travis.yml  Cargo.toml  README.md
benches/: my_benchmark.rs
examples/: basic.rs  bench.rs
src/: genmesh.rs  lib.rs
tests/: known_shapes.rs
