[package]
name = "quickhull"
version = "0.1.0"
authors = ["Alec Deason <alec@tinycountry.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.18"
alga = "0.9"
num-traits = "0.2.10"
ordered-float = "1.0"

genmesh = { version = "0.6.2", optional = true }
rayon = { version = "1.2.1", optional = true }

[features]
default = []

[dev-dependencies]
rand = "0.7.0"
